--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -56,6 +56,9 @@ en:
       focus_area: "Focus Area"
       actions: "Actions"
       public: "Public"
+      guide_me: "Tour"
+      step_one: "En estas pestanas podrás ver los proyectos en que trabajas (My project) y los proyectos compartidos por la comunidad (Other projects)"
+      step_two: "Para empezar a ingresar datos presionamos el proyecto a editar"
     project_modal: # modal `new project` of index
       project: "Project"
       title: "Title"
@@ -113,6 +116,9 @@ en:
       error_getting_policy: "Error while getting the policy problem information"
       confirm_delete_solution: "Are you sure you want to delete this solution?"
       confirm_delete_policy: "Are you sure you want to delete this policy problem?"
+      guide_me: "Tour"
+      step_one: "Existen 3 pestañas dentro de tu panel de proyecto: En Stages encontrarás las etapas de ingreso, Dashboard te mostrará los indicadores de progreso y su avance, y Documents tendrá archivos importantes para documentarte."
+      step_two: "Para empezar con el trabajo completaremos la Stage1"
     policy_modal: # modal `add policy` of stage 1
       policy: "Policy"
       title: "Title"
@@ -202,6 +208,8 @@ en:
       error_updating_objective: "Error while updating objective information"
       error_creating_objective: "Error while creating objective information"
       error_updating_goal: "Error while updating the goal information"
+      guide_me: "Tour"
+      step_one: "Acá contamos con 2 tipos de ingresos: Goal y Objetivos"
     goal_modal: # modal `goal` of stage 2
       goal: "Goal"
       title: "Title"
