fixed borderline cases in overview; closes #483

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -87,6 +87,7 @@ en:
       projects: "Projects"
       overview: "Overview"
       empty: "( empty field )"
+      uncreated: "( uncreated )"
     #
     # Stage 1
     #
