--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -900,3 +900,39 @@ en:
     new_user_share:
       new_add_to_share: 'You are invited to activate your account and collaborate in the proyect:'
       activate_account: 'Activate my account'
+  demo:
+    stage1:
+      projects: "Projects"
+      stage1: "Stage 1"
+      title: "What problems you want to address? What policy change you aim to achieve?"
+      description: "The foundation of an effective advocacy strategy is a common understanding of the main problems that affect children, their policy dimensions and related policy solutions. It is important you take time to go through this discussion because without a clear, articulated issue and well-defined problems and solutions the remaining parts of the strategy will lose focus."
+      subtitle1: "Which real-world problem children are facing that you want to address?"
+      subtitle1_tooltip: "A real-world problem is the negative situation children face that UNICEF would like to change (malnutrition, child poverty, infant mortality, disparities in education, etc). At the early stages of the planning process you should identify and articulate the real-world problem you want to address. The problem should be described as precisely and concretely as possible. For instance, whenever is possible, it should include the geographical scope, a time period, and population affected (see example below)"
+      subtitle1_explanation: "A real-world problem is the negative situation children face that UNICEF would like to change (malnutrition, child poverty, infant mortality, disparities in education, etc). At the early stages of the planning process you should identify and articulate the real-world problem you want to address. The problem should be described as precisely and concretely as possible. For instance, whenever is possible, it should include the geographical scope, a time period, and population affected (see example below)"
+      subtitle2: "Which are the policy-related causes of the real-world problem?"
+      subtitle2_tooltip: "Behind the real-world problems there are usually multiple causes, including causes related to programmes, to bad practices or to the policymaking environment. Advocacy work focuses specifically on the latest and often refers to causes such as deficient governance mechanisms, inadequate legal framework or imbalanced power relationships. Therefore, your problem analysis should prioritize the identification of these causes rather than all the factors behind the real-world problem"
+      subtitle3: "Which policy solutions would constitute an appropriate response?"
+      subtitle3_tooltip: "What are the main policy solutions that would resolve the problems identified and that UNICEF would like to see adopted?"
+      problem: "Problem"
+      description: "Description"
+      focus_area: "Focus Area"
+      data_entry: "Data Entry"
+      add_button: "Add"
+      edit_button: "Edit"
+      explanation_examples: "Explanation & Examples"
+      workshop_tips: "Workshop Tips"
+      policies_text: "Behind the real-world problems there are usually multiple causes, including causes related to programmes, to bad practices or to the policymaking environment. Advocacy work focuses specifically on the latest and often refers to causes such as deficient governance mechanisms, inadequate legal framework or imbalanced power relationships. Therefore, your problem analysis should prioritize the identification of these causes rather than all the factors behind the real-world problem"
+      error_focus_area: "Error while getting focus area information"
+      error_project: "Error while getting the project information"
+      error_policy_problems: "Error while getting policy problems information"
+      error_solutions: "Error while getting solutions information"
+      error_solution: "Error while getting a solution information"
+      error_updating: "Error while updating information"
+      error_insert: "Error while insert information"
+      error_updating_policy: "Error while updating a policy information"
+      error_creating_policy: "Error while creating a policy information"
+      error_updating_solution: "Error while updating a solution information"
+      error_creating_solution: "Error while creating a solution information"
+      error_getting_policy: "Error while getting the policy problem information"
+      confirm_delete_solution: "Are you sure you want to delete this solution?"
+      confirm_delete_policy: "Are you sure you want to delete this policy problem?"
