Added trello integration soon message

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -575,7 +575,7 @@ en:
       title_description: "Your advocacy strategy should describe the main actions that will be conducted in order to contribute to the desired change (interim outcome and advocacy objective). The types of actions are numerous and each action can contribute to different outcomes."
       subtitle1: "What actions must we do to achieve this Interim Outcome?"
       subtitle2: "How to organize the activities?"
-      subtitle2_explanation: "For planning and coordination purposes it is useful to place the activities in Trello."
+      subtitle2_explanation: "For planning and coordination purposes it is useful to place the activities in Trello. Trello integration will be available soon."
       data_entry: "Data Entry"
       explanation_examples: "Explanation & Examples"
       workshop_tips: "Workshop Tips"
