--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -76,6 +76,9 @@ en:
       dashboard: "Dashboard"
       documents: "Documents"
       overview: "Overview"
+      step_one: "Una vez en la página del proyecto verás 3 pestañas. En <strong>Stages</strong> encontrarás las etapas de ingreso de datos, <strong>Dashboard</strong> te mostrará los indicadores de éxito y avance, <strong>Documents</strong> será la biblioteca de documentos importantes, y por último <strong>Overview</strong> que muestra el resumen con toda la información ingresada"
+      step_two: "Empecemos con el trabajo completando la información solicitada en la <strong>Stage 1</strong>"
+      step_three: "Estos iconos te muestran los 3 estados de ingreso de información. Te dirán si necesitas llenar un paso previo (<i class='fa fa-lock'></i>), si está listo para ingreso (<i class='fa fa-unlock'></i>) o si ya contiene información (<i class='fa fa-check'></i>)"
     overview:     # http://localhost:3000/projects/1#overview
       projects: "Projects"
       overview: "Overview"
