--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -57,7 +57,7 @@ en:
       actions: "Actions"
       public: "Public"
       guide_me: "Tour"
-      step_one: "Para comenzar a trabajar creemos un <strong>New Project</strong>"
+      step_one: "To begin working we create a <strong>New Project</strong>"
       step_two: "En estas pestanas podrás ver los proyectos en que trabajas <strong>(My project)</strong> y los proyectos compartidos por la comunidad <strong>(Other projects)</strong>"
       step_three: "Para empezar a trabajar en el proyecto podemos hacer click sobre el nombre o seleccionar una de las funciones de la columna <strong>Actions</strong>"
     project_modal: # modal `new project` of index
