--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -56,7 +56,7 @@ en:
       focus_area: "Focus Area"
       actions: "Actions"
       public: "Public"
-      guide_me: "Tour"
+      guide_me: "Guide Me"
       step_one: "To begin working we create a <strong>New Project</strong>"
       step_two: "In these tabs you will see the projects in which you work <strong>(My project)</strong> and shared community projects <strong>(Other projects)</strong>"
       step_three: "To get started on the project you can click on the name or select one of the functions of the column <strong>Actions</strong>"
@@ -82,9 +82,9 @@ en:
       dashboard: "Dashboard"
       documents: "Documents"
       overview: "Overview"
-      step_one: "Una vez en la página del proyecto verás 3 pestañas. En <strong>Stages</strong> encontrarás las etapas de ingreso de datos, <strong>Dashboard</strong> te mostrará los indicadores de éxito y avance, <strong>Documents</strong> será la biblioteca de documentos importantes, y por último <strong>Overview</strong> que muestra el resumen con toda la información ingresada"
-      step_two: "Empecemos con el trabajo completando la información solicitada en la <strong>Stage 1</strong>"
-      step_three: "Estos iconos te muestran los 3 estados de ingreso de información. Te dirán si necesitas llenar un paso previo (<i class='fa fa-lock'></i>), si está listo para ingreso (<i class='fa fa-unlock'></i>) o si ya contiene información (<i class='fa fa-check'></i>)"
+      step_one: "Once the project page you will see 3 tabs. In <strong>Stages</strong> are the stages of data entry, <strong>Dashboard</strong> will show indicators of success and progress , will be the <strong>Documents</strong> library of important documents , and finally <strong>Overview</strong> showing the summary of all the information entered"
+      step_two: "Let's start with the advocacy plan by completing the information requested in the <strong>Stage 1</strong>"
+      step_three: "These icons show you the 3 states of data entry. They'll tell you if you need to fill a previous step (<i class='fa fa-lock'></i>), if they are ready to income (<i class='fa fa-unlock'></i>) or it contains information (<i class='fa fa-check'></i>)"
       stage1_title: "Step 1: Describe the problems and the corresponding policy solutions"
       stage2_title: "Step 2: Formulate policy objetives and rank them in order or priority"
       stage3_title: "Step 1: Set Goals"
@@ -140,8 +140,8 @@ en:
       error_getting_policy: "Error while getting the policy problem information"
       confirm_delete_solution: "Are you sure you want to delete this solution?"
       confirm_delete_policy: "Are you sure you want to delete this policy problem?"
-      guide_me: "Tour"
-      step_one: "Existen 3 pestañas dentro de tu panel de proyecto: En Stages encontrarás las etapas de ingreso, Dashboard te mostrará los indicadores de progreso y su avance, y Documents tendrá archivos importantes para documentarte."
+      guide_me: "Guide me"
+      step_one: "At all stages we find these 2 sections. <strong>Data entry</strong> will give us the opportunity to enter information into the system and <strong>Explanation & Examples</strong> will explain what each step."
       step_two: "Para empezar con el trabajo completaremos la Stage1"
     policy_modal: # modal `add policy` of stage 1
       policy: "Policy"
