--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -142,7 +142,7 @@ en:
       confirm_delete_policy: "Are you sure you want to delete this policy problem?"
       guide_me: "Guide me"
       step_one: "At all stages we find these 2 sections. <strong>Data entry</strong> will give us the opportunity to enter information into the system and <strong>Explanation & Examples</strong> will explain what each step."
-      step_two: "Para empezar con el trabajo completaremos la Stage1"
+      step_two: "Getting Started will complete Step 1, click to <strong>Add</strong>"
     policy_modal: # modal `add policy` of stage 1
       policy: "Policy"
       title: "Title"
