--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -167,7 +167,8 @@ en:
       confirm_delete_policy: "Are you sure you want to delete this policy problem?"
       guide_me: "Guide me"
       step_one: "At all stages we find these 2 sections. <strong>Data entry</strong> will give us the opportunity to enter information into the system and <strong>Explanation & Examples</strong> will explain what each step."
-      step_two: "Getting Started will complete Step 1, click to <strong>Add</strong>"
+      step_two: "To add information press <i class='fa fa-plus-circle'></i> <strong>Add</strong>, if you want information guide takes the pointer over the <i class='fa fa-info'></i> button. Once entered the data, you only have to press <i class='fa fa-pencil'></i> <strong>Edit</strong> to modify the information"
+      step_three: "Now add <strong>Policy Problems</strong>, they group <strong>Policy Solution</strong>"
     policy_modal: # modal `add policy` of stage 1
       policy: "Policy"
       title: "Title"
