guide me stage2

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -258,8 +258,12 @@ en:
       error_updating_objective: "Error while updating objective information"
       error_creating_objective: "Error while creating objective information"
       error_updating_goal: "Error while updating the goal information"
-      guide_me: "Tour"
-      step_one: "Acá contamos con 2 tipos de ingresos: Goal y Objetivos"
+      guide_me: "Guide me"
+      step_one: "Here we have 2 types of income: Goal and Objectives"
+      step_two: "Remember that you can <strong>Add</strong> and <strong>Edit</strong> with orange buttons and have <strong>Additional Information</strong> with blue buttons"
+      step_three: "This alert will inform the number of solutions without associated objectives"
+      step_four: "Pressing the text of the alert window will display a list of solutions, colored in <strong class='red'>red</strong> are unassigned"
+      step_five: "In this selection we <strong>add Objetives</strong> and <strong>partner with Solutions</strong>"
     goal_modal: # modal `goal` of stage 2
       goal: "Goal"
       title: "Title"
