added support for export activities as iCal file

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -623,7 +623,7 @@ en:
       title: "What will you do to achieve your advocacy objectives?"
       title_description: "Your advocacy strategy should describe the main actions that will be conducted in order to contribute to the desired change (interim outcome and advocacy objective). The types of actions are numerous and each action can contribute to different outcomes."
       subtitle1: "What actions must we do to achieve this Interim Outcome?"
-      subtitle2: "How to organize the activities?"
+      subtitle2: "Import your activities in your calendar"
       subtitle2_explanation: "For planning and coordination purposes it is useful to place the activities in Trello. Trello integration will be available soon."
       data_entry: "Data Entry"
       explanation_examples: "Explanation & Examples"
@@ -634,7 +634,7 @@ en:
       description: "Description"
       outcomes: "Outcomes"
       actions: "Actions"
-      trello: "Organize in Trello"
+      download_as_ical: "Downloads activities as iCal"
       error_getting_outcomes: "Error while getting outcomes information"
       error_getting_asks: "Error while getting asks information"
       error_getting_activities: "Error while getting activities information"
