--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -394,6 +394,10 @@ en:
       subtitle2_explanation: "Effective advocacy requires having a good understanding of all relevant actors: those with power to make change happen (decision-makers); those with influence over the decision-makers (influencers); and those in the community who would be supportive or opposing forces."
       subtitle3: "Identify additional enabling factors and barriers"
       subtitle3_tooltip: "Thanks to the prioritizing table, the decision-making cycle analysis and the actor mapping you will have already identified a number of enabling factors and barriers to achieve your chosen objective. However, you may need to go deeper into the analysis of the context surrounding the specific policy change that you want to pursue. You should think devote time to think about additional relevant enabling factors and barriers of different nature: financial, social, technological, factual, political, religious, cultural, geographical, organizational, etc."
+      guide_me: "Guide me"
+      step_one: "It draws the decision-making cycles using the draw.io application, a new tab will open in your browser"
+      step_two: "Add to actors involved in your advocacy plan with the <strong>Add Actor button</strong>, then you can edit or delete actions column"
+      step_three: "Enter the factors holding (<strong>Barriers</strong>) and help (<strong>Enabling Factors</strong>) to your advocacy objetives"
       data_entry: "Data Entry"
       explanation_examples: "Explanation & Examples"
       draw_sandbox_button: "Draw in draw.io"
