--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -503,6 +503,9 @@ en:
       subtitle1_explanation: "At this point in the planning process, the analysis necessary to underpin your advocacy strategy is complete. Hence, now it is time to use that analysis to guide the definition of the shorter-term results that must be achieved in order to reach the advocacy objective. These are your advocacy interim outcomes and when arranged sequencially they will describe the plausible path of how you envision that the policy change you are seeking will take place as a result of your advocacy."
       subtitle1_tooltip: "The interim outcomes refer to changes in the target audiences/critical players´attitudes, beliefs or behaviours."
       data_entry: "Data Entry"
+      guide_me: "Guide me"
+      step_one: "Define your Interim Outcomes adding them with the <i class='fa fa-plus-circle'></i> <strong>Add</strong> button"
+      step_two: "In the next step you'll associating activities, their number will be reflected in this column"
       explanation_examples: "Explanation & Examples"
       add_button: "Add"
       interim_outcome: "Interim Outcome"
